# gdf

./: MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml
examples/: 00-simple.py  01-kmf.py  01-rsgdf_kmf.py  02-mpi.py
gdf/: __init__.py  base.py  ccgdf.py  cell.py  ft.py  kpts.py  lib.py  parameters.py  rsgdf.py  util.py
gdf/lib/: CMakeLists.txt
gdf/lib/src/: CMakeLists.txt  jk.c
tests/: test_ccgdf.py  test_rsgdf.py
